# twiot-gateway

./: .env  .gitignore  Cargo.toml  build.py  build.sh  db.sqlite3  env.json  readme.md  run.py  twiot-gateway.sqlite3
frontend/: build.sh  elm.json  index.html  index.template.html
frontend/elm-stuff/0.19.1/: HelperModel.elmi  HelperModel.elmo  Main.elmi  Main.elmo  Model.elmi  Model.elmo
frontend/src/: HelperModel.elm  Main.elm  Model.elm
migrations/2020-10-31-162753_create_schedules/: up.sql
migrations/2020-11-01-051541_create_watering_times/: up.sql
migrations/2020-11-01-110551_create_devices/: up.sql
migrations/2020-11-01-110554_create_sensors/: up.sql
migrations/2020-11-01-133255_create_sensor_types/: up.sql
migrations/2020-11-01-133420_create_device_types/: up.sql
migrations/2020-11-13-155628_create_sensor_values/: up.sql
migrations/2020-11-13-160053_update_sensor_values/: up.sql
migrations/2020-11-13-160337_recreate_sensor_values_table/: up.sql
migrations/2021-01-27-163251_add_mac_to_device/: up.sql
migrations/2021-01-29-150233_add_ip_to_device/: up.sql
migrations/2021-01-30-164559_devices_watering_times/: up.sql
migrations/2021-01-30-171847_device_schedules/: up.sql
migrations/2021-01-31-134037_device_add_show_in_dashboard2/: up.sql
migrations/2021-02-15-170055_add_schedule_watering_time/: up.sql
src/: db.rs  handler.rs  helpermodels.rs  ip_check.rs  main.rs  models.rs  mqtt.rs  populate.rs  router.rs  schema.rs  serve.rs
