[package]
name = "twiot-gateway"
version = "0.1.0"
authors = ["vmasdani <valianmasdani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
rumqttc = "0.2.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.7"
gpio-cdev = "0.2"
chrono = "0.4.9"
machine-ip = "0.2.1"
qrcode = { version = "0.8", default-features = false }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
image = "0.23.4"
linux-embedded-hal = "0.2.2"
embedded-graphics = "0.6.2"
ssd1306 = "0.3.1"
wifiscanner = "0.5.*"
wifi-rs = "0.2.0"
bytes = "0.6.0"
actix-web = "3"
actix-rt = "1.1.1"
serde_json = "1.0"
serde = "1.0.117"
