[package]
name = "twiot-gateway"
version = "0.1.0"
authors = ["vmasdani <valianmasdani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
actix-cors = "0.5.4"
rumqttc = "0.2.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8.1", features = ["v4"] }
bytes = "0.6.0"
actix-web = "3"
actix-rt = "1.1.1"
serde_json = "1.0"
serde = "1.0.117"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
actix-files = "0.5.0"
tokio-diesel = "0.3.0"
ssd1306 = "0.5.1"
embedded-graphics = "0.6.2"
linux-embedded-hal = "0.3.0"
embedded-hal = "0.2.4"
machine-ip = "0.2.1"
qrcode = "0.12.0"
image = "0.23.13"
tinybmp = {version = "0.2.3", features = [ "graphics" ]}

[profile.release]
codegen-units=1
